[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HTSeqCountCluster"
version = "1.4"
description = "A cli for running multiple pbs/qsub jobs with HTSeq's htseq-count script on a cluster."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Shaurita Hutchins & Robert Gilmore", email = "datasnakes@gmail.com"}
]
keywords = ["science", "lab", "pyschiatry", "rnaseq", "htseq"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "HTSeq>=0.9.1",
    "pandas>=0.20.3",
    "logzero>=1.3.1",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov",
]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "sphinx",
    "myst-parser",
]

[project.urls]
Homepage = "https://github.com/datasnakes/htseq-count-cluster"
Documentation = "https://tinyurl.com/yb7kz7zz"
Website = "https://tinyurl.com/yb7kz7zz"

[project.scripts]
htseq-count-cluster = "HTSeqCountCluster.htseq_count_cluster:main"
merge-counts = "HTSeqCountCluster.mergecounts:main"

[tool.setuptools]
# Auto-discover packages (equivalent to find_packages() in setup.py)

[tool.setuptools.package-data]
HTSeqCountCluster = ["pbsjob/*.pbs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
